--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React Ant Design Admin</title>
   </head>
   <body>
-    <link rel="stylesheet/less" type="text/css" href="/color.less" />
+    <link rel="stylesheet/less" type="text/css" href="color.less" />
     <script>
       window.less = {
         async: false,
